--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
       sizes="76x76"
       href="./assets/img/apple-icon.png"
     />
-    <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
-    <title>Black Dashboard Angular by Creative Tim</title>
+    <link rel="icon" type="image/png" href="./assets/img/theme/logo_champions.png" />
+    <title>TeamProVzla</title>
     <!--     Fonts and icons     -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
