--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,9 @@
       rel="stylesheet"
     />
     <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>-->
-
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KM1242FYL"></script>
+    <script type="text/javascript" src="assets/js/analytics.js"></script>
   </head>
   <body>
     <app-root></app-root>
